--- a/src/main/resources/templates/IndexSearch.html
+++ b/src/main/resources/templates/IndexSearch.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/adminlayout/template_admin.html}">
-<title>list game news</title>
-
-<body >
+      layout:decorate="~{layout/template.html}">
+<head>
+    <meta charset="UTF-8">
+    <title>Home Page</title>
+</head>
+<body>
 <div class="main-panel" layout:fragment="content">
     <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
         <div class="container-fluid">
@@ -18,7 +20,7 @@
                 <span class="navbar-toggler-icon icon-bar"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end">
-                <form method="post" th:action="@{/newssearch}" class="navbar-form col-md-4" style="float: right; margin-top: 30px">
+                <form method="post" th:action="@{/searchcategorys}" class="navbar-form col-md-4" style="float: right; margin-top: 30px">
                     <div class="input-group no-border">
                         <input type="text" name="name" value="" class="form-control" placeholder="Search...">
                         <button type="submit" class="btn btn-white btn-round btn-just-icon">
@@ -79,41 +81,23 @@
                             <h4 class="card-title ">List </h4>
                         </div>
                         <div class="card-body">
-                            <a href="/createnew" class="btn btn-primary">Create New</a>
                             <div class="table-responsive">
                                 <table class="table">
                                     <thead class=" text-primary">
                                     <th scope="col">ID</th>
                                     <th scope="col">Name</th>
-                                    <th scope="col">Image</th>
-                                    <th scope="col">Description</th>
-                                    <th scope="col">Detailed description</th>
-                                    <th scope="col">createdAt</th>
-                                    <th scope="col">updatedAt</th>
                                     <th scope="col"></th>
                                     <th scope="col"></th>
                                     </thead>
                                     <tbody>
-                                    <tr th:each="news : ${gameNews}">
-                                        <th scope="row" th:text="${news.id}"></th>
-                                        <td th:text="${news.name}"></td>
-                                        <td th:text="${news.image}"></td>
-                                        <td th:text="${news.description}"></td>
-                                        <td th:text="${news.detailed_description}"></td>
-                                        <td th:text="${news.createdAt}"></td>
-                                        <td th:text="${news.updatedAt}"></td>
-                                        <td><a th:href="@{/updatenew(id=${news.id})}" th:text="Edit"></a></td>
-                                        <td><a th:href="@{/deletenew(id=${news.id})}" th:text="Delete"></a></td>
+                                    <tr th:each=" product : ${products1}">
+                                        <th scope="row" th:text="${product.name}"></th>
+                                        <td th:text="${product.category.name}"></td>
+                                        <td><a th:href="@{/updatecategory(id=${category.categoryid})}" th:text="Edit"></a></td>
+                                        <td><a th:href="@{/deletecategory(id=${category.categoryid})}" th:text="Delete"></a></td>
                                     </tr>
                                     </tbody>
                                 </table>
-                                <nav aria-label="Page navigation">
-                                    <ul class="pagination">
-                                        <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">
-                                            <a class="page-link" th:href="@{/listnew(size=${size}, page=${t})}" th:text="${t+1}"></a>
-                                        </li>
-                                    </ul>
-                                </nav>
                             </div>
                         </div>
                     </div>
@@ -122,7 +106,5 @@
         </div>
     </div>
 </div>
-
 </body>
-
 </html>
