--- a/src/main/resources/templates/list_user.html
+++ b/src/main/resources/templates/list_user.html
@@ -56,6 +56,13 @@
                                     </tr>
                                     </tbody>
                                 </table>
+                                <nav aria-label="Page navigation">
+                                    <ul class="pagination">
+                                        <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">
+                                            <a class="page-link" th:href="@{/list(size=${size}, page=${t})}" th:text="${t+1}"></a>
+                                        </li>
+                                    </ul>
+                                </nav>
                             </div>
                         </div>
                     </div>
