--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -150,19 +150,16 @@
                                         <a href="/index" > <i class="las la-home"></i> Home</a>
                                     </li>
                                     <li>
-                                        <a href="#">Shop</a>
-                                    </li>
-                                    <li>
                                         <a href="/products">Product</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" >Brand</a>
                                     </li>
                                     <li>
                                         <a href="/news" >News</a>
                                     </li>
                                     <li>
                                         <a href="/about" >About Us</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Support</a>
                                     </li>
                                 </ul><!-- End .menu -->
                             </nav><!-- End .main-nav -->
