--- a/src/main/resources/templates/buyer_order.html
+++ b/src/main/resources/templates/buyer_order.html
@@ -30,21 +30,24 @@
                                     </thead>
                                     <tbody>
                                         <tr th:each="item : ${orderitem}">
-                                            <th scope="row" th:text="${item.products.user.username}"></th>
+                                            <th scope="row" th:text="${item.orders.user.username}"></th>
                                             <td th:text="${item.products.name}"></td>
                                             <td th:text="${item.orders.priceTotal}"></td>
                                             <td th:text="${item.orders.status}"></td>
                                             <td th:text="${item.orders.createdAt}"></td>
                                             <td th:text="${money} + ' (-20% fee)'"></td>
-                                            <td th:if="${item.orders.status} != 'DELIVERED' ">
+                                            <td th:if="${item.orders.status} == 'PAID' ">
                                                 <form method="post" action="/seller_confirm">
                                                 <input type="hidden" name="id" th:value="${item.orders.orderid}">
                                                 <button type="submit" class="btn btn-primary">CONFIRM</button>
                                                 <!--                                        <a class="btn btn-success" th:href="@{/orderdetail(id=${ord.orderid})}">Detail</a>-->
                                                 </form>
                                             </td>
-                                            <td th:if="${item.orders.status} == 'DELIVERED' ">
+                                            <td th:if="${item.orders.status} == 'DELIVERED'">
                                                 <p class="font-weight-bold">CONFIRMED</p>
+                                            </td>
+                                            <td th:if="${item.orders.status} == 'RECEIVED'">
+                                                <p class="font-weight-bold">DONE</p>
                                             </td>
                                         </tr>
                                     </tbody>
