--- a/src/main/resources/templates/listProductManager.html
+++ b/src/main/resources/templates/listProductManager.html
@@ -24,14 +24,14 @@
                                     <th scope="col">Price</th>
                                     <th scope="col">Quantity</th>
                                     <th scope="col">Description</th>
-                                    <!--                                    <th scope="col">createdAt</th>-->
+                                    <th scope="col"></th>
                                     <th scope="col"></th>
                                     </thead>
                                     <tbody>
                                     <tr th:each="product : ${products}">
                                         <th scope="row" th:text="${product.productid}"></th>
                                         <td th:text="${product.name}"></td>
-                                        <td > <img th:src="@{${'/images/' + product.image}}"height="50px"width="50px"></td>
+                                        <td th:text="${product.image}"> </td>
                                         <td th:text="${product.price}"></td>
                                         <td th:text="${product.quantity}"></td>
                                         <td th:text="${product.description}"></td>
