--- a/src/main/resources/templates/updateProductManager.html
+++ b/src/main/resources/templates/updateProductManager.html
@@ -22,7 +22,8 @@
                                 <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <input type="hidden" th:name="id" th:value="${product.productid}" class="form-control">
+                                            <label for="id" class="bmd-label-floating">Id</label>
+                                            <input type="text" th:name="id" th:value="${product.productid}" class="form-control">
                                         </div>
                                     </div>
                                     <div class="col-md-9">
@@ -37,8 +38,8 @@
                                         <div class="form-group">
                                             <div class="custom-file">
                                                 <input type="file" class="custom-file-input" id="filename" th:name="filename" accept="image/jpeg,image/png,image/jpg">
-                                                <label class="custom-file-label" for="filename">Choose file</label>
-                                                <input type="hidden" name="imgname" th:value="${product.image}" >
+                                                <label class="bmd-label-floating" for="filename">Choose file</label>
+                                                <input type="text" name="imgname" th:value="${product.image}" class="form-control" >
                                             </div>
                                         </div>
                                     </div>
@@ -60,13 +61,17 @@
                                     </div>
                                 </div>
                                     <div class="col-md-6">
-                                        <div class="form-group">
-
-                                            <label for="category" class="bmd-label-floating" >Category</label>
-                                            <input  id="category" type="text" th:name="categoryid" th:text="${product.category.name}" th:value="${product.category.categoryid}" class="form-control">
+                                        <div class="select-custom">
+                                            <label for="categoryid">Category</label>
+                                            <select class="form-control" aria-label="category" id="categoryid" name="categoryid" >
+                                                <option
+                                                        th:text="${product.category.name}"
+                                                        th:value="${product.category.categoryid}"
+                                                ></option>
+                                            </select>
                                         </div>
                                     </div>
-                                    <button type="submit" class="btn btn-primary pull-right">Update Product User</button>
+                                    <button type="submit" class="btn btn-primary pull-right" style="margin-left: 100px; height: 45px;margin-top: 25px">Update Product User</button>
                                     <div class="clearfix"></div>
                                 </div>
                             </form>
