--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -31,12 +31,6 @@
                     <div class="row">
                         <div class="col-lg-9">
                             <div class="toolbox">
-                                <div class="toolbox-left">
-                                    <div class="toolbox-info">
-                                        Showing <span>9 of 56</span> Products
-                                    </div><!-- End .toolbox-info -->
-                                </div><!-- End .toolbox-left -->
-
                                 <div class="toolbox-right">
                                     <div class="toolbox-sort">
                                         <label for="sortby">Sort by:</label>
@@ -126,12 +120,11 @@
                                     </div><!-- End .col-sm-6 col-lg-4 col-xl-3 -->
                                 </div>
                             </div><!-- End .products -->
-                            <nav aria-label="Page navigation">
-                                <ul class="pagination">
+                           <nav aria-label="Page navigation">
+                                <ul class="pagination justify-content-center">
                                     <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">
                                         <a class="page-link" th:href="@{/products(size=${size}, page=${t})}" th:text="${t+1}"></a>
                                     </li>
-
                                 </ul>
                             </nav>
 
