--- a/src/main/resources/templates/sellerproduct.html
+++ b/src/main/resources/templates/sellerproduct.html
@@ -30,12 +30,6 @@
                     <div class="row">
                         <div class="col-lg-9">
                             <div class="toolbox">
-                                <div class="toolbox-left">
-                                    <div class="toolbox-info">
-                                        Showing <span>9 of 56</span> Products
-                                    </div><!-- End .toolbox-info -->
-                                </div><!-- End .toolbox-left -->
-
                                 <div class="toolbox-right">
                                     <div class="toolbox-sort">
                                         <label for="sortby">Sort by:</label>
@@ -132,22 +126,10 @@
                                 </div><!-- End .row -->
                             </div><!-- End .products -->
 
-
                             <nav aria-label="Page navigation">
                                 <ul class="pagination justify-content-center">
-                                    <li class="page-item disabled">
-                                        <a class="page-link page-link-prev" href="#" aria-label="Previous" tabindex="-1" aria-disabled="true">
-                                            <span aria-hidden="true"><i class="icon-long-arrow-left"></i></span>Prev
-                                        </a>
-                                    </li>
-                                    <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                    <li class="page-item-total">of 6</li>
-                                    <li class="page-item">
-                                        <a class="page-link page-link-next" href="#" aria-label="Next">
-                                            Next <span aria-hidden="true"><i class="icon-long-arrow-right"></i></span>
-                                        </a>
+                                    <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">
+                                        <a class="page-link" th:href="@{/products(size=${size}, page=${t})}" th:text="${t+1}"></a>
                                     </li>
                                 </ul>
                             </nav>
@@ -169,69 +151,14 @@
                                     <div class="collapse show" id="widget-1">
                                         <div class="widget-body">
                                             <div class="filter-items filter-items-count">
-                                                <div class="filter-item">
+                                                <div class="filter-item"  th:each="category : ${categorys}">
                                                     <div class="custom-control custom-checkbox">
                                                         <input type="checkbox" class="custom-control-input" id="cat-1">
-                                                        <label class="custom-control-label" for="cat-1">Dresses</label>
+                                                        <a  th:href="@{/list_product_category(name=${category.name})}" class="custom-control-label" for="cat-1" th:text="${category.name}"></a>
                                                     </div><!-- End .custom-checkbox -->
                                                     <span class="item-count">3</span>
                                                 </div><!-- End .filter-item -->
 
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="cat-2">
-                                                        <label class="custom-control-label" for="cat-2">T-shirts</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                    <span class="item-count">0</span>
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="cat-3">
-                                                        <label class="custom-control-label" for="cat-3">Bags</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                    <span class="item-count">4</span>
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="cat-4">
-                                                        <label class="custom-control-label" for="cat-4">Jackets</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                    <span class="item-count">2</span>
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="cat-5">
-                                                        <label class="custom-control-label" for="cat-5">Shoes</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                    <span class="item-count">2</span>
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="cat-6">
-                                                        <label class="custom-control-label" for="cat-6">Jumpers</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                    <span class="item-count">1</span>
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="cat-7">
-                                                        <label class="custom-control-label" for="cat-7">Jeans</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                    <span class="item-count">1</span>
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="cat-8">
-                                                        <label class="custom-control-label" for="cat-8">Sportwear</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                    <span class="item-count">0</span>
-                                                </div><!-- End .filter-item -->
                                             </div><!-- End .filter-items -->
                                         </div><!-- End .widget-body -->
                                     </div><!-- End .collapse -->
