phân-trang-productcategory

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -48,7 +48,7 @@
                                                 <figure class="product-media">
                                                     <a href="#">
                                                         <img th:src="@{${'/images/' + item.product.image}}"
-                                                             alt="Product image">
+                                                             alt="Product image" enctype="multipart/form-data">
                                                     </a>
                                                 </figure>
 
