--- a/src/main/resources/templates/listproductcategory.html
+++ b/src/main/resources/templates/listproductcategory.html
@@ -30,12 +30,6 @@
                     <div class="row">
                         <div class="col-lg-9">
                             <div class="toolbox">
-                                <div class="toolbox-left">
-                                    <div class="toolbox-info">
-                                        Showing <span>9 of 56</span> Products
-                                    </div><!-- End .toolbox-info -->
-                                </div><!-- End .toolbox-left -->
-
                                 <div class="toolbox-right">
                                     <div class="toolbox-sort">
                                         <label for="sortby">Sort by:</label>
@@ -132,25 +126,14 @@
                                 </div><!-- End .row -->
                             </div><!-- End .products -->
 
-
                             <nav aria-label="Page navigation">
                                 <ul class="pagination justify-content-center">
-                                    <li class="page-item disabled">
-                                        <a class="page-link page-link-prev" href="#" aria-label="Previous" tabindex="-1" aria-disabled="true">
-                                            <span aria-hidden="true"><i class="icon-long-arrow-left"></i></span>Prev
-                                        </a>
-                                    </li>
-                                    <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                    <li class="page-item-total">of 6</li>
-                                    <li class="page-item">
-                                        <a class="page-link page-link-next" href="#" aria-label="Next">
-                                            Next <span aria-hidden="true"><i class="icon-long-arrow-right"></i></span>
-                                        </a>
+                                    <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">
+                                        <a class="page-link" th:href="@{/products(size=${size}, page=${t})}" th:text="${t+1}"></a>
                                     </li>
                                 </ul>
                             </nav>
+
                         </div><!-- End .col-lg-9 -->
                         <aside class="col-lg-3 order-lg-first">
                             <div class="sidebar sidebar-shop">
@@ -176,7 +159,6 @@
 
 
                                                     </div><!-- End .custom-checkbox -->
-                                                    <span class="item-count">3</span>
                                                 </div><!-- End .filter-item -->
 
                                                 <!--<div class="filter-item">
@@ -234,70 +216,6 @@
                                                     </div>&lt;!&ndash; End .custom-checkbox &ndash;&gt;
                                                     <span class="item-count">0</span>
                                                 </div>&lt;!&ndash; End .filter-item &ndash;&gt;-->
-                                            </div><!-- End .filter-items -->
-                                        </div><!-- End .widget-body -->
-                                    </div><!-- End .collapse -->
-                                </div><!-- End .widget -->
-
-                                <div class="widget widget-collapsible">
-                                    <h3 class="widget-title">
-                                        <a data-toggle="collapse" href="#widget-4" role="button" aria-expanded="true" aria-controls="widget-4">
-                                            Brand
-                                        </a>
-                                    </h3><!-- End .widget-title -->
-
-                                    <div class="collapse show" id="widget-4">
-                                        <div class="widget-body">
-                                            <div class="filter-items">
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="brand-1">
-                                                        <label class="custom-control-label" for="brand-1">Next</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="brand-2">
-                                                        <label class="custom-control-label" for="brand-2">River Island</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="brand-3">
-                                                        <label class="custom-control-label" for="brand-3">Geox</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="brand-4">
-                                                        <label class="custom-control-label" for="brand-4">New Balance</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="brand-5">
-                                                        <label class="custom-control-label" for="brand-5">UGG</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="brand-6">
-                                                        <label class="custom-control-label" for="brand-6">F&amp;F</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="brand-7">
-                                                        <label class="custom-control-label" for="brand-7">Nike</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
                                             </div><!-- End .filter-items -->
                                         </div><!-- End .widget-body -->
                                     </div><!-- End .collapse -->
