--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -31,6 +31,9 @@
                     <div class="row">
                         <div class="col-lg-9">
                             <div class="toolbox">
+                                <div class="toolbox-left">
+                                </div><!-- End .toolbox-left -->
+
                                 <div class="toolbox-right">
                                     <div class="toolbox-sort">
                                         <label for="sortby">Sort by:</label>
@@ -120,7 +123,7 @@
                                     </div><!-- End .col-sm-6 col-lg-4 col-xl-3 -->
                                 </div>
                             </div><!-- End .products -->
-                           <nav aria-label="Page navigation">
+                            <nav aria-label="Page navigation">
                                 <ul class="pagination justify-content-center">
                                     <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">
                                         <a class="page-link" th:href="@{/products(size=${size}, page=${t})}" th:text="${t+1}"></a>
@@ -151,71 +154,6 @@
                                                     <div class="custom-control custom-checkbox">
                                                         <input type="checkbox" class="custom-control-input" id="cat-1">
                                                         <a  th:href="@{/list_product_category(name=${category.name})}" class="custom-control-label" for="cat-1" th:text="${category.name}"></a>
-                                                    </div><!-- End .custom-checkbox -->
-                                                    <span class="item-count">3</span>
-                                                </div><!-- End .filter-item -->
-
-                                            </div><!-- End .filter-items -->
-                                        </div><!-- End .widget-body -->
-                                    </div><!-- End .collapse -->
-                                </div><!-- End .widget -->
-
-                                <div class="widget widget-collapsible">
-                                    <h3 class="widget-title">
-                                        <a data-toggle="collapse" href="#widget-4" role="button" aria-expanded="true" aria-controls="widget-4">
-                                            Brand
-                                        </a>
-                                    </h3><!-- End .widget-title -->
-
-                                    <div class="collapse show" id="widget-4">
-                                        <div class="widget-body">
-                                            <div class="filter-items">
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="brand-1">
-                                                        <label class="custom-control-label" for="brand-1">Next</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="brand-2">
-                                                        <label class="custom-control-label" for="brand-2">River Island</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="brand-3">
-                                                        <label class="custom-control-label" for="brand-3">Geox</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="brand-4">
-                                                        <label class="custom-control-label" for="brand-4">New Balance</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="brand-5">
-                                                        <label class="custom-control-label" for="brand-5">UGG</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="brand-6">
-                                                        <label class="custom-control-label" for="brand-6">F&amp;F</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="brand-7">
-                                                        <label class="custom-control-label" for="brand-7">Nike</label>
                                                     </div><!-- End .custom-checkbox -->
                                                 </div><!-- End .filter-item -->
 
