--- a/src/main/resources/templates/detailproduct.html
+++ b/src/main/resources/templates/detailproduct.html
@@ -37,28 +37,15 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="product-gallery product-gallery-vertical">
-                            <div class="row">
+                            <div class="row" >
                                 <figure th:object="${product}" class="product-main-image">
-                                    <img id="product-zoom" th:src="@{${'/images/' + product.image}}"
-                                         >
+                                    <img id="product-zoom" th:src="@{${'/images/' + product.images[0].name}}"                                        >
                                     </a>
                                 </figure><!-- End .product-main-image -->
 
-                                <div id="product-zoom-gallery" class="product-image-gallery">
-                                    <a class="product-gallery-item" href="#">
-                                        <img th:src="@{${'/images/' + product.image}}" alt="product side">
-                                    </a>
-
-                                    <a class="product-gallery-item" href="#">
-                                        <img th:src="@{${'/images/' + product.image}}" alt="product cross">
-                                    </a>
-
-                                    <a class="product-gallery-item" href="#">
-                                        <img th:src="@{${'/images/' + product.image}}" alt="product with model">
-                                    </a>
-
-                                    <a class="product-gallery-item active" href="#">
-                                        <img th:src="@{${'/images/' + product.image}}" alt="product back">
+                                <div id="product-zoom-gallery" class="product-image-gallery"  >
+                                    <a class="product-gallery-item" href="#" th:each="image:${product.images}">
+                                        <img th:src="@{${'/images/' + image.name}}" alt="product side">
                                     </a>
                                 </div><!-- End .product-image-gallery -->
                             </div><!-- End .row -->
@@ -81,8 +68,6 @@
                             </div><!-- End .product-price -->
 
                             <div class="product-content">
-                                <p th:text="${product.description}">Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus
-                                    libero eu augue. Morbi purus libero.</p>
                                 <p th:text="${product.user.address}">Adress: Ha Noi</p>
                                <p th:text="${product.quantity} + ' product available' ">
                             </div><!-- End .product-content -->
@@ -129,10 +114,6 @@
                            role="tab" aria-controls="product-desc-tab" aria-selected="true">Description</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="product-info-link" data-toggle="tab" href="#product-info-tab" role="tab"
-                           aria-controls="product-info-tab" aria-selected="false">Additional information</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" id="product-shipping-link" data-toggle="tab" href="#product-shipping-tab"
                            role="tab" aria-controls="product-shipping-tab" aria-selected="false">Shipping &amp;
                             Returns</a>
@@ -147,47 +128,12 @@
                          aria-labelledby="product-desc-link">
                         <div class="product-desc-content">
                             <h3>Product Information</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat
+                            <p th:text="${product.description}">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat
                                 mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna viverra non, semper
                                 suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum. Aliquam
                                 porttitor mauris sit amet orci. Aenean dignissim pellentesque felis. Phasellus ultrices
                                 nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique
                                 cursus. </p>
-                            <ul>
-                                <li>Nunc nec porttitor turpis. In eu risus enim. In vitae mollis elit.</li>
-                                <li>Vivamus finibus vel mauris ut vehicula.</li>
-                                <li>Nullam a magna porttitor, dictum risus nec, faucibus sapien.</li>
-                            </ul>
-
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat
-                                mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna viverra non, semper
-                                suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum. Aliquam
-                                porttitor mauris sit amet orci. Aenean dignissim pellentesque felis. Phasellus ultrices
-                                nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique
-                                cursus. </p>
-                        </div><!-- End .product-desc-content -->
-                    </div><!-- .End .tab-pane -->
-                    <div class="tab-pane fade" id="product-info-tab" role="tabpanel"
-                         aria-labelledby="product-info-link">
-                        <div class="product-desc-content">
-                            <h3>Information</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat
-                                mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna viverra non, semper
-                                suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum. Aliquam
-                                porttitor mauris sit amet orci. </p>
-
-                            <h3>Fabric &amp; care</h3>
-                            <ul>
-                                <li>Faux suede fabric</li>
-                                <li>Gold tone metal hoop handles.</li>
-                                <li>RI branding</li>
-                                <li>Snake print trim interior</li>
-                                <li>Adjustable cross body strap</li>
-                                <li> Height: 31cm; Width: 32cm; Depth: 12cm; Handle Drop: 61cm</li>
-                            </ul>
-
-                            <h3>Size</h3>
-                            <p>one size</p>
                         </div><!-- End .product-desc-content -->
                     </div><!-- .End .tab-pane -->
                     <div class="tab-pane fade" id="product-shipping-tab" role="tabpanel"
