--- a/src/main/resources/templates/listproduct.html
+++ b/src/main/resources/templates/listproduct.html
@@ -95,7 +95,7 @@
                                     <tr th:each="product : ${products}">
                                         <th scope="row" th:text="${product.productid}"></th>
                                         <td th:text="${product.name}"></td>
-                                        <td > <img th:src="@{${'/images/' + product.image}}"height="50px"width="50px"></td>
+                                        <td > <img th:src="@{${'/images/' + product.images[0].name}}"height="50px"width="50px"></td>
                                         <td th:text="${product.price}"></td>
                                         <td th:text="${product.quantity}"></td>
                                         <td th:text="${product.description}"></td>
