--- a/src/main/resources/templates/createProductUser.html
+++ b/src/main/resources/templates/createProductUser.html
@@ -55,18 +55,18 @@
                                     <div class="form-group">
                                         <div class="custom-file">
                                             <input type="file"  class="custom-file-input" id="filename" name="files"
-                                                   accept="image/jpeg,image/png,image/jpg" >
+                                                   accept="image/jpeg,image/png,image/jpg" multiple="multiple" >
                                             <label class="custom-file-label" for="filename">Choose file</label>
                                         </div>
                                    </div>
 
-                                    <div class="form-group">
-                                        <div class="custom-file">
-                                            <input type="file"  class="custom-file-input" id="filename2" name="files"
-                                                   accept="image/jpeg,image/png,image/jpg" >
-                                            <label class="custom-file-label" for="filename2">Choose file</label>
-                                        </div>
-                                    </div>
+<!--                                    <div class="form-group">-->
+<!--                                        <div class="custom-file">-->
+<!--                                            <input type="file"  class="custom-file-input" id="filename2" name="files"-->
+<!--                                                   accept="image/jpeg,image/png,image/jpg" >-->
+<!--                                            <label class="custom-file-label" for="filename2">Choose file</label>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
 
                                 <div class="col-md-12">
                                     <div class="form-group">
